Adding all basics assignments
component, databinding and directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<input type="text" [(ngModel)]="name">
-<p>{{name}}</p>
+<h1>Component Assignment</h1>
+<hr/>
+<app-success-alert></app-success-alert>
+<hr />
+<!--<app-databinding></app-databinding>-->
+<app-directive></app-directive>
 
